# art

./: .gitignore  .gitmodules  CMakeLists.txt  data-sources.txt  library-evaluation.txt  meson.build  readme.md  record.sh  setup.sh  test.cc  test.sh  todo.txt  vcpkg.json
data/: .gitignore  download.sh
data/lola/: download.sh
data/wanikani/: .gitignore  download.py  notes.txt  process.py  process2.py  pyproject.toml  wani.py
fonts/: download.sh
notes/: data-sources.txt  error.txt  library-evaluation.txt  nasa-lola.txt  todo.txt  vsync.txt
src/: area.hh  assimp.hh  buffers.hh  cache_vector.hh  drawable.hh  dust.hh  font-atlas.hh  fragment.glsl  fullscreen-quad.hh  glerror.hh  glfw.hh  grid.hh  header.glsl  inverter.hh  julia.frag.glsl  julia.hh  julia.vert.glsl  layer.hh  lines.hh  noise.glsl  noise.hh  profiler.hh  render.cc  shader.hh  shared-uniforms.hh  text-overlay.hh  text-wanikani.hh  text.frag.glsl  ticks.hh  triangles.hh  util.hh  vertex.glsl  vulkan.cc  wanikani-review-time-grid.hh
src/data/: example_iterator.cc  interleave.hpp  lola-rdr.hh  pds.hh  pds3.hh  pds4.hh  serialisation.hh
src/drawables/: dust.hh  grid-bezier-evaluator.hh  grid.hh  inverter.hh  julia.hh  lines.hh  text-overlay.hh  text-wanikani.hh  ticks.hh
src/engine/: assimp.hh  buffers.hh  cache_vector.hh  drawable.hh  font-atlas.hh  fullscreen-quad.hh  glfw.hh  lola-rdr.hh  mmap.hh  render-to-file.hh  rigid-body.hh  shader.hh  shared-uniforms.hh  webgpu-buffers.hh  webgpu.hh
src/scenes/: brain.hh  disintegrate.hh  grid-3d.hh  grid-bezier.hh  icosphere.hh  noise-flow-particles.hh  orbiter.hh  scratch.hh  template-scene.hh  vsync-test.hh  wanikani-review-time-grid.hh  wanikani-subject-grid.hh
src/util/: area.hh  gl-data-layout.hh  gl-data-layout.t.hh  glm.hh  misc.hh  profiler.hh  webgpu-raii.hh
subprojects/: raii_utils  utils
vulkan/: meson.build
